# cppm

./: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
src/: init.hpp  main.cpp
src/init/: init.cpp  template.hpp
